--- a/Visualisierung/index.html
+++ b/Visualisierung/index.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
+    <div id="mainScreen">
     <div id="renderer">
         <div id="hoverLabel"></div>
         <div id="clickLabel"></div>
     </div>
-
+    </div>
     <script src="data.js"></script>
+    <script src="dataTsu.js"></script>
     <script src="js/main.js"></script>
 </body>
 
