--- a/Visualisierung/index.html
+++ b/Visualisierung/index.html
@@ -74,8 +74,8 @@
             </div>
         </div>
         <div id="renderer">
-            <div id="hoverLabel"></div>
-            <div id="clickLabel"></div>
+            <!-- <div id="hoverLabel"></div>
+            <div id="clickLabel"></div> -->
         </div>
     </div>
     <script>
