--- a/Visualisierung/depth.html
+++ b/Visualisierung/depth.html
@@ -8,7 +8,7 @@
     <script src="lib/gmynd.js"></script>
     <link rel="stylesheet" href="css/styleDepth.css">
 
-
+    <link rel="icon" type="image/x-icon" href="/Assets/favicon.ico">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
