--- a/Visualisierung/slider.html
+++ b/Visualisierung/slider.html
@@ -6,9 +6,9 @@
     <title>Aufgabe 5</title>
     <script src="lib/jquery.min.js"></script>
     <script src="lib/gmynd.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleSlider.css">
 
-
+    <link rel="icon" type="image/x-icon" href="/Assets/favicon.ico">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
