Finale Oh oh oh
Datenvisualisierung 3D Model hinzugefügt

--- a/Visualisierung/comparison.html
+++ b/Visualisierung/comparison.html
@@ -23,6 +23,7 @@
     <!-- Navigationsleiste -->
     <div class="navbar">
         <a href="index.html">Overview</a>
+        <a href="planetview.html">3D Model</a>
         <a href="slider.html">Time Beam</a>
         <a class="active" href="comparison.html">Comparison</a>
         <a href="depth.html">Depth and Intensity</a>
@@ -57,6 +58,12 @@
             <div id="clickLabel"></div> -->
             </div>
         </div>
+        <div id="commentsBox"></div>
+
+                <!-- <div id="hoverDetails" class="fixed-container">
+            <div id="hoverDate"></div>
+            <div id="matchedEventsCount"></div>
+        </div> -->
     </div>
     <script>
         // Sobald die Seite vollständig geladen ist, den Loader ausblenden
