--- a/Visualisierung/slider.html
+++ b/Visualisierung/slider.html
@@ -22,6 +22,7 @@
 
     <div class="navbar">
         <a href="index.html">Overview</a>
+        <a href="planetview.html">3D Model</a>
         <a class="active" href="slider.html">Time Beam</a>
         <a href="comparison.html">Comparison</a>
         <a href="depth.html">Depth and Intensity</a>
